# rubiks_cube

./: README.md
client/: package-lock.json  package.json
client/src/: App.jsx  CubeDisplay.jsx  CubeDisplay3D.jsx  CubeMovesToolbar.jsx  CubePiece3D.jsx  CubePieceFace3D.jsx  Face.jsx
server/: Cargo.toml
server/src/: cors.rs  cube.rs  main.rs
