[package]
name = "rubiks_cube"
version = "0.1.0"
edition = "2021"

[dependencies]
nalgebra = { version = "0.33.0", features = ["serde-serialize"] }
strum = "0.24"
strum_macros = "0.24"
serde = { version = "1.0", features = ["derive"] }

[dependencies.rocket]
version = "0.5.1"
features = ["json"]

rocket_cors = "0.5.1"